# The-Politics-Simulator

./: .gitignore  CMakeLists.txt  GameState.cpp  GameState.h  The Politics Simulator.sln  The Politics Simulator.vcxproj  The Politics Simulator.vcxproj.filters  main.cpp  stb_truetype.h  text.fs  text.vs
text/: TextRenderer.cpp  TextRenderer.h
ui/: UIColors.h  UIElements.h
